<resources>
    <string name="app_name">Список дел</string>

    <string name="pin">Введите ваш пин</string>
    <string name="pin_new">Введите новый ваш пин</string>
    <string name="pin_save">cохранить пинкод</string>
    <string name="save_btn">сохранить запись</string>
    <string name="pin_hint">4-х значный пикод</string>
    <string name="pin_message">вы поменяли пинкод</string>

    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>

    <string name="check_pin_failed" >Пин код неверный</string>
    <string name="check_date_failed" >Вы ввели время не в том формате</string>
    <string name="save_note" >Сохранить</string>
    <string name="title" >Название</string>
    <string name="content" >Описание</string>

    <string name="deadline_text" >Дедлайн</string>
    <string name="deadline_text_elem" >дедлайн:</string>
    <string name="was_changed" >Изменено</string>
    <string name="was_changed_elem" >изменено:</string>



    <string name="hours" >ч</string>
    <string name="min" >м</string>
    <string name="sep" >:</string>

    <string name="ok_btn" >ок</string>
    <string name="no_btn" >отмена</string>

    <string name="delete_req" >Удалить запись</string>
    <string name="delete_yes" >да</string>
    <string name="delete_no" >нет</string>

</resources>
