<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/pin"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/circle_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <View
            android:id="@+id/c1"
            android:layout_width="20dp"
            android:layout_height="20dp"

            android:background="@drawable/grey_circle" />

        <View
            android:id="@+id/c2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"

            android:background="@drawable/grey_circle" />

        <View
            android:id="@+id/c3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"

            android:background="@drawable/grey_circle" />

        <View
            android:id="@+id/c4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"

            android:background="@drawable/grey_circle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_row_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_row">

        <Button
            android:id="@+id/num_1"
            android:layout_width="0dp"
            android:text="@string/num_1"
            android:textSize="20sp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />

        <Button
            android:text="@string/num_2"
            android:id="@+id/num_2"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />

        <Button
            android:text="@string/num_3"
            android:id="@+id/num_3"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_row_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_row_1">

        <Button
            android:text="@string/num_4"
            android:id="@+id/num_4"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />

        <Button
            android:text="@string/num_5"
            android:id="@+id/num_5"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />

        <Button
            android:text="@string/num_6"
            android:id="@+id/num_6"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_row_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_row_2">

        <Button
            android:text="@string/num_7"
            android:id="@+id/num_7"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />

        <Button
            android:text="@string/num_8"
            android:id="@+id/num_8"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />

        <Button
            android:text="@string/num_9"
            android:id="@+id/num_9"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_row_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_row_3">

        <Button
            android:text="@string/num_0"
            android:id="@+id/num_0"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />

        <ImageButton
            android:id="@+id/clear"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />

        <ImageButton
            android:id="@+id/clear_all"
            android:src="@drawable/ic_clear_black_24dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/low_yellow" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>