<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeNoteActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

    <EditText
        android:id="@+id/title_ch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/title"

 />

    <EditText
        android:id="@+id/content_ch"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="6"
        android:hint="@string/content"
 />
        <EditText
            android:id="@+id/deadline_ch"
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/deadline"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/btn_save"
            android:layout_weight="1"
            android:layout_marginEnd="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/low_green"
            android:text="@string/save_note"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>