<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NotesList">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Деталь от танка"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintStart_toEndOf="@id/btn_add"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/content"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintStart_toEndOf="@id/btn_delete"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/deadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/deadline_text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/red_card"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/deadline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/deadline_text_elem"
        app:layout_constraintStart_toEndOf="@id/btn_delete"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <TextView
        android:id="@+id/was_changed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/was_changed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/deadline" />

    <TextView
        android:id="@+id/was_changed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/was_changed_elem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_delete"
        app:layout_constraintTop_toBottomOf="@id/deadline" />


    <ImageButton

        android:id="@+id/btn_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/white_circle"
        android:minHeight="15dp"
        android:src="@drawable/change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"

        android:background="@drawable/red_circle"
        android:minHeight="15dp"
        android:src="@drawable/delete"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>