<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <CalendarView
        android:id="@+id/pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/sep"
        app:layout_constraintTop_toBottomOf="@+id/pick_date" />

    <TextView
        android:id="@+id/sep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sep"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_date" />

    <TextView
        android:id="@+id/min"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/sep"
        app:layout_constraintTop_toBottomOf="@+id/pick_date" />


    <TextView
        android:id="@+id/hours_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/hours"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hours" />

    <SeekBar
        android:id="@+id/hours_ch"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:max="23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hours_title"
        app:layout_constraintTop_toBottomOf="@+id/hours" />


    <TextView
        android:id="@+id/min_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/min"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hours_ch" />

    <SeekBar
        android:id="@+id/min_ch"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:max="59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hours_title"
        app:layout_constraintTop_toBottomOf="@+id/hours_ch" />

    <ImageButton
        android:id="@+id/no_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/red_circle"
        android:minHeight="15dp"
        android:src="@drawable/no"
        app:layout_constraintEnd_toStartOf="@+id/ok_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_ch" />

    <ImageButton
        android:id="@+id/ok_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/white_circle"
        android:minHeight="15dp"
        android:src="@drawable/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/no_btn"
        app:layout_constraintTop_toBottomOf="@+id/min_ch" />



</androidx.constraintlayout.widget.ConstraintLayout>